<?xml version="1.0"?>
<package format="2">
  <name>yolov5</name>
  <version>0.0.1</version>
  <description>The yolov5 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ahmed.ali.radwan94@gmail.com">radwan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospack</build_depend>

  


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospack</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospack</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
